Split up the verbs that were combined into one

--- a/docs/03. System Verbs.md
+++ b/docs/03. System Verbs.md
@@ -77,12 +77,21 @@ server_log("checkpoint_finished: " + tostr(args[1]));
 .
 ```
 ```
-;add_verb(#0, {#2, "rxd", "user_created user_connected"}, {"this", "none", "this"})
+;add_verb(#0, {#2, "rxd", "user_created"}, {"this", "none", "this"})
 .program #0:user_created
 if (callers())
   return;
 endif
-server_log("user_created/user_connected: " + tostr(args[1]));
+server_log("user_created: " + tostr(args[1]));
+.
+```
+```
+;add_verb(#0, {#2, "rxd", "user_connected"}, {"this", "none", "this"})
+.program #0:user_connected
+if (callers())
+  return;
+endif
+server_log("user_connected: " + tostr(args[1]));
 .
 ```
 ```
@@ -95,12 +104,21 @@ server_log("user_reconnected: " + tostr(args[1]));
 .
 ```
 ```
-;add_verb(#0, {#2, "rxd", "user_disconnected user_client_disconnected"}, {"this", "none", "this"})
+;add_verb(#0, {#2, "rxd", "user_disconnected"}, {"this", "none", "this"})
 .program #0:user_disconnected
 if (callers())
   return;
 endif
-server_log("user_disconnected/user_client_disconnected: " + tostr(args[1]));
+server_log("user_disconnected: " + tostr(args[1]));
+.
+```
+```
+;add_verb(#0, {#2, "rxd", "user_client_disconnected"}, {"this", "none", "this"})
+.program #0:user_client_disconnected
+if (callers())
+  return;
+endif
+server_log("user_client_disconnected: " + tostr(args[1]));
 .
 ```
 ```
