--- a/docs/05. Generic API and Model.md
+++ b/docs/05. Generic API and Model.md
@@ -44,7 +44,7 @@ A Generic Room should allow players and any non-room objects in it's inventory. 
 
 #### A first draft
 
-With the basic concepts defined, we can now begin to create our first draft. Once again, using LambdaCore for some guidance, where a fair amount of verbs are actually defined in the Root Class. Besides the complex bits we can see the easier elements like `description` and the `aliases` system property. Other interesting tidbits are the way how `accept` is delegated to a new verb `acceptable` and the simplicity of the `tell` verb. The benefit of putting these on `#1`, is that everything else instantly gains similar features, for it *is* the Root Class.
+With the basic concepts defined, we can now begin to create our first draft. Once again, using LambdaCore for some guidance, where a fair amount of verbs are actually defined in the Root Class. Besides the complex bits we can see the easier elements like `description` and the `aliases` system property. Other interesting tidbits are the way how `accept` is delegated to a new verb `acceptable` and the simplicity of the `notify` verb. The benefit of putting these on `#1`, is that everything else instantly gains similar features, for it *is* the Root Class.
 
 As we investigate more, we can see that LambdaCore defines *action* (mostly @commands) on the player object tree, while *interaction* (movement, `say`, `emote`, `look`) is on the room (eg. location). Also, the player tree is substancial, while the room tree simply delegates everything to the original *First Room* now dubbed "generic room".
 
