--- a/docs/03. System Verbs.md
+++ b/docs/03. System Verbs.md
@@ -25,7 +25,7 @@ The following list can also be overridden on other network listener objects:
 
 #### Generic Objects
 
-Any object can implement the following verbs:
+Any object can implement the following verbs and property:
 
 - `initialize()`
 - `recycle()`
